plugins {
    id("java")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(15)
    }
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--enable-preview", "--release", "15", "-Xlint:deprecation", "-Xlint:unchecked"]
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    maxParallelForks = 8
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

configurations {
    all {
        resolutionStrategy {
            failOnVersionConflict()
        }
    }
}
